[1.2.1] - Unreleased

# Changed

[1.2.0] - 2019-08-23

# Changed

- Now the restrictions' length will be scaled with the related transforms

# Removed

- End Node: That's modeler's responsibility (and remove it makes the code looks so much better)

[1.1.0] - 2019-07-24

# Added
- Added nested editor for PBMaterials

# Changed
- Package path changed to Assets/EZhex1991/EZPhysicsBone
- Shorten material, collider, and force module's name
- Revised some comments

[1.0.0] - 2019-06-10

# First Release